<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!--modelVersion / -->
	<modelVersion>4.0.0</modelVersion>
	<!--parent / -->
	<!--groupId / -->
	<groupId>com.github.nhojpatrick.hamcrest</groupId>
	<!--artifactId / -->
	<artifactId>nhojpatrick-hamcrest</artifactId>
	<!--packaging / -->
	<packaging>pom</packaging>
	<!--name / -->
	<!--version / -->
	<version>1.0.0</version>
	<!--description / -->
	<!--url / -->
	<!--prerequisites / -->
	<!--issueManagement / -->
	<!--ciManagement / -->
	<!--inceptionYear / -->
	<!--mailingLists / -->
	<!--developers / -->
	<!--contributors / -->
	<!--licenses / -->
	<!--scm / -->
	<!--organization / -->
	<!--build /-->
	<build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>3.1.12.2</version>
<!--					<configuration>-->
<!--						<plugins>-->
<!--							<plugin>-->
<!--								<groupId>com.h3xstream.findsecbugs</groupId>-->
<!--								<artifactId>findsecbugs-plugin</artifactId>-->
<!--								<version>1.9.0</version>-->
<!--							</plugin>-->
<!--							<plugin>-->
<!--								<groupId>com.mebigfatguy.fb-contrib</groupId>-->
<!--								<artifactId>fb-contrib</artifactId>-->
<!--								<version>7.4.6</version>-->
<!--							</plugin>-->
<!--							<plugin>-->
<!--								<groupId>jp.skypencil.findbugs.slf4j</groupId>-->
<!--								<artifactId>bug-pattern</artifactId>-->
<!--								<version>1.5.0</version>-->
<!--							</plugin>-->
<!--						</plugins>-->
<!--					</configuration>-->
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<compilerArgs>
							<arg>-parameters</arg>
							<!--<arg>-verbose</arg>-->
							<arg>-Xlint:unchecked</arg>
						</compilerArgs>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>${project.failsafe.argLine.jpms}</argLine>
						<includes>
							<include>**/*IT.java</include>
						</includes>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<archive>
							<manifestEntries>
								<Automatic-Module-Name>${project.Automatic-Module-Name}</Automatic-Module-Name>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.9</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>${project.surefire.argLine.jpms}</argLine>
						<excludes>
							<exclude>**/*IT.java</exclude>
						</excludes>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>remove-project-artifact-default</id>
							<goals>
								<goal>remove-project-artifact</goal>
							</goals>
							<configuration>
								<removeAll>true</removeAll>
							</configuration>
						</execution>
						<execution>
							<id>remove-project-artifact-clean</id>
							<phase>clean</phase>
							<goals>
								<goal>remove-project-artifact</goal>
							</goals>
							<configuration>
								<removeAll>true</removeAll>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
					<dependencies>
						<dependency>
							<groupId>com.github.nhojpatrick.versions</groupId>
							<artifactId>nhojpatrick-versions-ruleset</artifactId>
							<version>1</version>
						</dependency>
					</dependencies>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
						<rulesUri>classpath:///com/github/nhojpatrick/versions/ruleset/rules.xml</rulesUri>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.4</version>
					<executions>
						<execution>
							<id>jacoco-prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>[1.8,9),[11,)</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>[3.6.1,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>

		</plugins>
	</build>
	<!--profiles / -->
	<profiles>
		<profile>
			<id>jpms</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>add-source-Java_Platform_Module_System</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>${project.basedir}/src/jpms-main/java</source>
									</sources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<properties>
				<project.custom.java.version>9</project.custom.java.version>
				<maven.compiler.release>9</maven.compiler.release>
				<project.failsafe.argLine.jpms>${project.failsafe.argLine.jpms.global} ${project.failsafe.argLine.jpms.module}</project.failsafe.argLine.jpms>
				<project.surefire.argLine.jpms>${project.surefire.argLine.jpms.global} ${project.surefire.argLine.jpms.module}</project.surefire.argLine.jpms>
			</properties>
		</profile>
		<profile>
			<id>qa_jacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>jacoco-check</id>
								<phase>validate</phase>
								<goals>
									<goal>check</goal>
								</goals>
								<configuration>
									<rules>
										<rule>
											<element>BUNDLE</element>
											<excludes>
												<exclude>*Test</exclude>
												<exclude>*IT</exclude>
											</excludes>
											<limits>
												<limit>
													<counter>LINE</counter>
													<value>COVEREDRATIO</value>
													<minimum>${jacoco.bundle.line.coveredratio}</minimum>
												</limit>
												<limit>
													<counter>CLASS</counter>
													<value>MISSEDCOUNT</value>
													<maximum>${jacoco.bundle.class.missedcount}</maximum>
												</limit>
											</limits>
										</rule>
										<!--										<rule>-->
										<!--											<element>CLASS</element>-->
										<!--											<excludes>-->
										<!--												<exclude>*Test</exclude>-->
										<!--												<exclude>*IT</exclude>-->
										<!--											</excludes>-->
										<!--											<limits>-->
										<!--												<limit>-->
										<!--													<counter>LINE</counter>-->
										<!--													<value>COVEREDRATIO</value>-->
										<!--													<minimum>${jacoco.class.line.coveredratio}</minimum>-->
										<!--												</limit>-->
										<!--												<limit>-->
										<!--													<counter>CLASS</counter>-->
										<!--													<value>MISSEDCOUNT</value>-->
										<!--													<maximum>${jacoco.class.class.missedcount}</maximum>-->
										<!--												</limit>-->
										<!--											</limits>-->
										<!--										</rule>-->
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>qa_spotbugs</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>spotbugs-check</id>
								<phase>validate</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>versions</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>versions-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>versions_display-dependency-updates</id>
								<phase>validate</phase>
								<goals>
									<goal>display-dependency-updates</goal>
								</goals>
							</execution>
							<execution>
								<id>versions_display-plugin-updates</id>
								<phase>validate</phase>
								<goals>
									<goal>display-plugin-updates</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<!--modules / -->
	<modules>
		<module>all</module>
		<module>collections</module>
		<module>datetime</module>
		<module>lang</module>
		<module>optionals</module>
		<module>testing</module>
	</modules>
	<!--repositories / -->
	<!--pluginRepositories / -->
	<!--dependencies / -->
	<!--reports (Deprecated) / -->
	<!--reporting / -->
	<!--dependencyManagement / -->
	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-all</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-collections</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-lang</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-optionals</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-testing</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs</artifactId>
				<version>${version.org.spotbugs}</version>
			</dependency>

			<dependency>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-annotations</artifactId>
				<version>${version.org.spotbugs}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${version.org.apache.commons.lang3}</version>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${version.org.hamcrest}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${version.org.junit.jupiter}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${version.org.junit.jupiter}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>${version.org.junit.vintage}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${version.org.slf4j}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${version.org.slf4j}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<!--distributionManagement / -->
	<!--properties / -->
	<properties>
		<!-- custom properties -->
		<project.custom.encoding>UTF-8</project.custom.encoding>
		<project.custom.java.version>1.8</project.custom.java.version>
		<!-- override maven properties -->
		<maven.test.failure.ignore>false</maven.test.failure.ignore>
		<maven.compiler.source>${project.custom.java.version}</maven.compiler.source>
		<maven.compiler.target>${project.custom.java.version}</maven.compiler.target>
		<project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
		<project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
		<project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
		<!-- maven plugins user properties -->
		<downloadSources>true</downloadSources>
		<downloadJavadocs>true</downloadJavadocs>
		<generateBackupPoms>false</generateBackupPoms>
		<!-- Surefire/Failsafe jpms override(s) -->
		<project.failsafe.argLine.jpms></project.failsafe.argLine.jpms>
		<project.failsafe.argLine.jpms.global>
			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED
		</project.failsafe.argLine.jpms.global>
		<project.failsafe.argLine.jpms.module></project.failsafe.argLine.jpms.module>
		<project.surefire.argLine.jpms></project.surefire.argLine.jpms>
		<project.surefire.argLine.jpms.global>
			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED
			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=org.junit.platform.commons
			--add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
			--add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
		</project.surefire.argLine.jpms.global>
		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
		<!-- -->
		<version.org.apache.commons.lang3>3.9</version.org.apache.commons.lang3>
		<version.org.hamcrest>2.1</version.org.hamcrest>
		<version.org.spotbugs>3.1.12</version.org.spotbugs>
		<version.org.junit.jupiter>5.5.1</version.org.junit.jupiter>
		<version.org.junit.vintage>5.5.1</version.org.junit.vintage>
		<version.org.slf4j>1.7.27</version.org.slf4j>
		<!-- -->
		<project.Automatic-Module-Name></project.Automatic-Module-Name>
		<jacoco.bundle.line.coveredratio>54%</jacoco.bundle.line.coveredratio>
		<jacoco.bundle.class.missedcount>15</jacoco.bundle.class.missedcount>
		<spotbugs.maxAllowedViolations>0</spotbugs.maxAllowedViolations>
	</properties>
</project>
